--- a/milestone-module/mi01mo04/intel.html
+++ b/milestone-module/mi01mo04/intel.html
@@ -8,22 +8,24 @@
     <title>Peter Parker Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section>
-        <div>
+    <section class="top-banner">
+        <div class="half-width">
             <h1>Welcome To</h1>
-            <h1>Peter Parker World</h1>
+            <h1><span class="heading-color">Peter Parker</span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.
-                That's why I am learning and mastering web development. I will not stop until I become the Web Development
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
                 Hero.</p>
-            <a target="_blank" href="#">Hire Me</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/crescent-deb-nath-partha/">Hire Me</a>
         </div>
-        <div>
+        <div class="half-width">
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
