--- a/milestone-module/mi01mo04/intel.html
+++ b/milestone-module/mi01mo04/intel.html
@@ -23,10 +23,21 @@
                 That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development
                 Hero.</p>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/crescent-deb-nath-partha/">Hire Me</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+    <section class="middle-banner">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="https://github.com/ProgrammingHero1">Download Resume</a>
         </div>
     </section>
 
