--- a/milestone-module/mi01mo04/intel.html
+++ b/milestone-module/mi01mo04/intel.html
@@ -29,6 +29,7 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
+
     <section class="middle-banner">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
@@ -40,6 +41,26 @@
             <a class="link-button" target="_blank" href="https://github.com/ProgrammingHero1">Download Resume</a>
         </div>
     </section>
+
+    <section class="banner">
+        <h1>Experiences</h1>
+        <section class="last-banner">
+            <div class="half-width shadow" id="id1">
+                <h2>Full Stack Developer</h2>
+                <h3>2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="half-width shadow" id="id2">
+                <h2>Baby Web Developer</h2 >
+                <h3>2021-2022 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </section>
+    </section>
+
+    <footer>
+        <p>&copy; Peter Parker 2022, a Programming Hero initiative.</p>
+    </footer>
 
 </body>
 
