--- a/project1/intel.html
+++ b/project1/intel.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+
+    <!-- Hearder Section Contant Design -->
     <header>
         <div class="head-title">
             <h1>Crescent Partha</h1>
@@ -29,23 +31,25 @@
         </div>
     </header>
 
-    <section>
-        <div>
-            <h1>Welcome To <br> Crescent Partha World!</h1>
+    <!-- Top Banner Contant Design -->
+    <section class="top-banner">
+        <div class="tb-half-width">
+            <h1>Welcome To <br> <span class="name">Crescent Partha</span> World!</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
             <a target="_blank" href="#">Hire Me</a>
         </div>
-        <div>
+        <div class="tb-image1">
             <img src="images/my-bg1.jpg" alt="Person Image">
         </div>
     </section>
-        
-    <section>
-        <div>
+    
+    <!-- Middle Banner Contant Design -->
+    <section class="middle-banner">
+        <div class="middle-img">
             <img src="images/my-bg1.jpg" alt="Person Image">
         </div>
-        <div>
+        <div class="middle-half-width">
             <h1>Dream Big</h1>
             <h3>Become a web developer</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
@@ -53,19 +57,22 @@
         </div>
     </section>
 
-    <section>
+    <!-- Bottom Banner Contant Design -->
+    <section class="bottom-banner">
         <h1>Experiences</h1>
-        <div>
+        <div class="bottom-half-width">
             <h1>Full Stack Developer</h1>
             <h3>2021-Present | Pro Level Developer</h3>
             <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
-        <div>
+        <div class="bottom-half-width">
             <h1>Baby Web Developer</h1>
             <h3>2021-2022 | Programming Hero Learner</h3>
             <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
     </section>
+
+    <!-- Footer Contant Design -->
     <footer>
         <p>© Crescent Partha 2022, a Programming Hero initiative.</p>
     </footer>
