Navigation Bar, Top-Banner, Middle-Banner Design Added

--- a/project1/intel.html
+++ b/project1/intel.html
@@ -23,7 +23,7 @@
         <div class="head-list">
             <ul>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Rsume</a></li>
+                <li><a href="#">Resume</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Home</a></li>
@@ -45,11 +45,11 @@
     </section>
     
     <!-- Middle Banner Contant Design -->
-    <section class="middle-banner">
-        <div class="middle-img">
+    <section class="middle-banner top-banner">
+        <div class="middle-img tb-image1">
             <img src="images/my-bg1.jpg" alt="Person Image">
         </div>
-        <div class="middle-half-width">
+        <div class="middle-half-width tb-half-width">
             <h1>Dream Big</h1>
             <h3>Become a web developer</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
