--- a/project1/intel.html
+++ b/project1/intel.html
@@ -59,22 +59,27 @@
 
     <!-- Bottom Banner Contant Design -->
     <section class="bottom-banner">
-        <h1>Experiences</h1>
-        <div class="bottom-half-width">
-            <h1>Full Stack Developer</h1>
-            <h3>2021-Present | Pro Level Developer</h3>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        <div class="h1-margin">
+            <h1>Experiences</h1>
         </div>
-        <div class="bottom-half-width">
-            <h1>Baby Web Developer</h1>
-            <h3>2021-2022 | Programming Hero Learner</h3>
-            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        <div class="top-banner">
+            <div class="bottom-half-width" id="bottom1">
+                <h1>Full Stack Developer</h1>
+                <h3>2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="bottom-half-width" id="bottom2">
+                <h1>Baby Web Developer</h1>
+                <h3>2021-2022 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
         </div>
     </section>
+    <hr>
 
     <!-- Footer Contant Design -->
     <footer>
-        <p>© Crescent Partha 2022, a Programming Hero initiative.</p>
+        <p>© <span class="name">Crescent Partha</span> 2022, a Programming Hero initiative.</p>
     </footer>
 </body>
 
