Limit Section and Global Section Added Successfully

--- a/milestone-module/assignments/ass01/index.html
+++ b/milestone-module/assignments/ass01/index.html
@@ -34,21 +34,21 @@
         <div class="mb-3">
             <div class="mb-2">
                 <div class="div-1">
-                    <img src="./images/illustrator-1.png" alt="">
+                    <img src="./images/illustrator-1.png" alt="Image an illustrator">
                     <h3>Mission</h3>
                     <p>The first flight of NASA's X-57, a small, experimental airplane powered by electricity. All-electric technology will make flying cleaner, quieter, and more sustainable. The flight will take place at NASA's Armstrong Flight Research Center in California.</p>
                 </div>
             </div>
             <div class="mb-2">
                 <div class="div-1" id="id1">
-                    <img src="./images/illustrator-2.png" alt="">
+                    <img src="./images/illustrator-2.png" alt="Image an illustrator">
                     <h3>Vission</h3>
                     <p>SpaceX plans to fly a Starship spacecraft to orbit for the first time early next year. The company is targeting early March for its first Starship orbital launch, with as many as a dozen test flights to follow in 2022.</p>
                 </div>
             </div>
             <div class="mb-2">
                 <div class="div-1" id="id2">
-                    <img src="./images/illustrator-3.png" alt="">
+                    <img src="./images/illustrator-3.png" alt="Image an illustrator">
                     <h3>Goals</h3>
                     <p>Earth can be seen rising above the Moon's surface in this picture taken by NASA's Lunar Reconnaissance Orbiter. With interest in Earth's natural satellite increasing, both private and government missions will get support from NASA under the agency's updated exploration road map. </p>
                 </div>
@@ -59,11 +59,34 @@
     
     <!-- Limit Section Design Start -->
 
-
-
+    <section class="limit">
+        <div class="limit-img">
+            <img src="./images/coding.png" alt="Coding Image">
+        </div>
+        <div class="limit-hpa">
+            <h1>Develop <br> Without Limits</h1>
+            <p>The development costs, fees, and expenses contained herein are the maximum amounts that 
+            may be included in total development cost and, if applicable, the Tax Credit eligible basis of 
+            the development. These limitations will apply through cost certification.</p>
+            <a href="#">Read the Documentation</a>
+        </div>
+    </section>
     <!-- Limit Section Design Close -->
 
+    <!-- Global Section Design Start -->
+    
+    <section class="limit" id="limit-id">
+        <div class="limit-hpa">
+            <h1>Know our <br> Global Community</h1>
+            <p>Global Communities is an international development and humanitarian aid organization that operates in approximately 25 countries per year. The non-profit organization was founded in 1952 as the Cooperative Housing Foundation and provided affordable housing for low-income families in rural and urban America.</p>
+            <a href="#">Read the Documentation</a>
+        </div>
+        <div class="limit-img">
+            <img src="./images/project.png" alt="Coding Image">
+        </div>
+    </section>
 
+    <!-- Global Section Design Close -->
 
 </body>
 </html>
