Application & Footer Section Added | Website build successfully without responsive

--- a/milestone-module/assignments/ass01/index.html
+++ b/milestone-module/assignments/ass01/index.html
@@ -88,5 +88,37 @@
 
     <!-- Global Section Design Close -->
 
+    <!-- Application Section Design Start  -->
+
+    <section >
+        <div class="mb-1">
+            <h1>Build <span>Blood Donar Application</span></h1>
+        </div>
+        <div class="limit">
+            <div class="limit-img" id="img">
+                <img src="./images/cover_page.jpg" alt="Coding Image">
+            </div>
+            <div class="limit-hpa">
+                <h1>Give Blood Donation<br> Save<span>People</span></h1>
+                <p>Blood is the most precious gift that anyone can give to another person — the gift of life. A decision to donate your blood can save a life. There is a constant need for regular blood supply because blood can be stored for only a limited time before use. Regular blood donations by a sufficient number of healthy people are needed to ensure that safe blood will be available whenever and wherever it is needed. This project help them to collect blood to save life. They can get every deatials of any blood donor.</p>
+                <a href="#">App Features</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Application Section Design Close   -->
+
+    <!-- Footer Section Design Start -->
+
+    <footer>
+        <h1>Mission <span>2022</span></h1>
+        <p>Hard Work, Perseverance, and Determination for 2022</p>
+    </footer>
+
+    <!-- Footer Section Design Close -->
+
+
+
+
 </body>
 </html>
