Module-7.5 | Task-2 & Task-3 Added

--- a/milestone-module/milestone02/module7.5/index.html
+++ b/milestone-module/milestone02/module7.5/index.html
@@ -44,5 +44,60 @@
             </ol>
         </li>
     </ol>
+
+    <audio src="./media/audio/tiger-audio.mp3" controls autoplay muted></audio>
+
+    <video src="./media/video/tiger-video.mp4" controls autoplay muted>Tiger Animal</video>
+    <!-- Video tag does not support browser.
+    <video contrals autoplay>
+        <source src="./media/video/tiger-video.mp4" type="video/mp3">
+    </video> -->
+
+    <table border="2">
+        <caption>Frined list for taking treat</caption>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Place</th>
+                <th>Birth Date</th>
+                <th>Restaurants</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Konik</td>
+                <td>Mirza Jangal</td>
+                <td>09-11-1996</td>
+                <td>Titanic</td>
+            </tr>
+            <tr>
+                <td>Showmen</td>
+                <td>Mirza Jangal</td>
+                <td>04-05-1997</td>
+                <td>Mad Grill</td>
+            </tr>
+            <tr>
+                <td>Nayeem</td>
+                <td>Baluchor</td>
+                <td>10-11-1997</td>
+                <td>Pachbai</td>
+            </tr>
+            <tr>
+                <td>Idrajit</td>
+                <td>Tilaghor</td>
+                <td>05-06-1997</td>
+                <td>Panshi</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Mohon</td>
+                <td>Amborkana</td>
+                <td>27-11-1998</td>
+                <td>Red House</td>
+            </tr>
+        </tfoot>
+    </table>
+
 </body>
 </html>
