HTML5: All pages linked - Home | Semantic | Table | Form | About Us

--- a/milestone-module/milestone02/module6-html5/index.html
+++ b/milestone-module/milestone02/module6-html5/index.html
@@ -12,6 +12,29 @@
 </head>
 
 <body>
+    <section>
+        <header class="header">
+            <!-- nav>a*4{link-$} -->
+            <!-- <nav>
+                <a href="">link-1</a><a href="">link-2</a><a href="">link-3</a><a href="">link-4</a>
+            </nav> -->
+    
+            <!-- nav>ul>li*5>a -->
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="semantic.html">Semantic</a></li>
+                    <li><a href="table.html">Table</a></li>
+                    <li><a href="form.html">Form</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </nav>
+            <hr>
+            <h1>Welcome to my website</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates magnam praesentium laboriosam illo nobisdicta ipsam repellendus dolores accusantium quasi quod dignissimos hic, nihil eveniet!</p>
+            <hr>
+        </header>
+    </section>
     <h1 class="title">Exploring HTML5</h1>
     <h1 class="heading1-title">Video-6.1: Audio | Videos | Iframe</h1>
     <hr>
