--- a/milestone-module/milestone02/module6-html5/form.html
+++ b/milestone-module/milestone02/module6-html5/form.html
@@ -9,9 +9,33 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <header class="header">
+        <!-- nav>a*4{link-$} -->
+        <!-- <nav>
+            <a href="">link-1</a><a href="">link-2</a><a href="">link-3</a><a href="">link-4</a>
+        </nav> -->
+
+        <!-- nav>ul>li*5>a -->
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="semantic.html">Semantic</a></li>
+                <li><a href="table.html">Table</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+        </nav>
+        <hr>
+        <h1>Welcome to my Form</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates magnam praesentium laboriosam illo nobisdicta ipsam repellendus dolores accusantium quasi quod dignissimos hic, nihil eveniet!</p>
+        <hr>
+    </header>
+
     <h1 class="heading1-title">Video-6.4: Form - input, label, fieldset, legend, textarea, submit</h1>
     <hr>
     <form action="">
+        <h1>Jamaler Maa Special TSC Pitha Expo</h1>
         <p>Name: <input type="text" name="name" placeholder="Enter your name" required id=""></p>
         <p>Email: <input type="email" name="email" placeholder="Enter your email" required id=""></p>
         <fieldset>
