--- a/milestone-module/milestone02/module6-html5/table.html
+++ b/milestone-module/milestone02/module6-html5/table.html
@@ -19,7 +19,15 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="semantic.html">Semantic</a></li>
+                <li><a href="semantic.html">Semantic
+                    <!-- ul>li*4>a{link-$} -->
+                    <ul class="dropdown">
+                        <li><a href="./admin/access.html">Access</li>
+                        <li><a href="">link-2</a></li>
+                        <li><a href="">link-3</a></li>
+                        <li><a href="">link-4</a></li>
+                    </ul>
+                </a></li>
                 <li><a href="table.html">Table</a></li>
                 <li><a href="form.html">Form</a></li>
                 <li><a href="#">About Us</a></li>
