--- a/milestone-module/milestone02/module6-html5/index.html
+++ b/milestone-module/milestone02/module6-html5/index.html
@@ -34,6 +34,7 @@
                     </a></li>
                     <li><a href="table.html">Table</a></li>
                     <li><a href="form.html">Form</a></li>
+                    <li><a href="svg.html">SVG</a></li>
                     <li><a href="#">About Us</a></li>
                 </ul>
             </nav>
