--- a/milestone-module/milestone02/module6-html5/svg.html
+++ b/milestone-module/milestone02/module6-html5/svg.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Access</title>
+    <title>SVG</title>
     <link rel="shortcut icon" href="images/person-1.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header class="header">
@@ -18,8 +18,8 @@
         <!-- nav>ul>li*5>a -->
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../semantic.html">Semantic
+                <li><a href="index.html">Home</a></li>
+                <li><a href="semantic.html">Semantic
                         <!-- ul>li*4>a{link-$} -->
                         <ul class="dropdown">
                             <li><a href="./admin/access.html">Access</li>
@@ -28,9 +28,9 @@
                             <li><a href="">link-4</a></li>
                         </ul>
                     </a></li>
-                <li><a href="../table.html">Table</a></li>
-                <li><a href="../form.html">Form</a></li>
-                <li><a href="../svg.html">SVG</a></li>
+                <li><a href="table.html">Table</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="svg.html">SVG</a></li>
                 <li><a href="#">About Us</a></li>
             </ul>
         </nav>
@@ -39,6 +39,19 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates magnam praesentium laboriosam illo nobisdicta ipsam repellendus dolores accusantium quasi quod dignissimos hic, nihil eveniet!</p>
 
     </header>
-    <h1>Welcome to my Access World!</h1>
+    <h1>Explore SVG for Fun</h1>
+    <hr>
+    <svg viewBox="0 0 200 200" style="border: 1px solid red;" width="400" height="400"> 
+        <circle cx="100" cy="100" r="80" fill="yellow"></circle>>
+        <circle cx="65" cy="70" r="18" fill="black"></circle>
+        <circle cx="130" cy="70" r="18" fill="black"></circle>
+        <path d="M65 125 A1, 0.8 0 0, 0 130 125" stroke="black" stroke-width="4"></path>
+    </svg>
+    <svg viewBox="0 0 200 200" style="border: 1px solid red;" width="400" height="400"> 
+        <rect x="20" y="20" width="100" height="100" fill="yellow"></rect>
+    </svg>
+    
+
+
 </body>
 </html>
