--- a/milestone-module/milestone02/module6-html5/table.html
+++ b/milestone-module/milestone02/module6-html5/table.html
@@ -30,6 +30,7 @@
                 </a></li>
                 <li><a href="table.html">Table</a></li>
                 <li><a href="form.html">Form</a></li>
+                <li><a href="svg.html">SVG</a></li>
                 <li><a href="#">About Us</a></li>
             </ul>
         </nav>
