Module7: animation-float added | all paged linked

--- a/milestone-module/milestone02/module7-icon-animation/animation.html
+++ b/milestone-module/milestone02/module7-icon-animation/animation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transform Element</title>
+    <title>Animation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -38,19 +38,9 @@
         <hr>
     </header>
     
-    <h1>Hi Transformar, I am coming.</h1>
-    <!-- .container*3>.inner{box-$} -->
-    <div class="container">
-        <div class="inner">box-1</div>
+    <h1>Lets explor Animation</h1>
+    <div class="stage">
+        <div class="c-ball"></div>
     </div>
-    <div class="container">
-        <div class="inner">box-2</div>
-    </div>
-    <div class="container">
-        <div class="inner">box-3</div>
-    </div>
-
-
-
 </body>
 </html>
