--- a/milestone-module/milestone02/module7-icon-animation/transition.html
+++ b/milestone-module/milestone02/module7-icon-animation/transition.html
@@ -8,6 +8,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="header">
+        <!-- nav>a*4{link-$} -->
+        <!-- <nav>
+            <a href="">link-1</a><a href="">link-2</a><a href="">link-3</a><a href="">link-4</a>
+        </nav> -->
+
+        <!-- nav>ul>li*5>a -->
+        <nav>
+            <ul>
+                <li><a href="./visibility.html">Visibility</a></li>
+                <li><a href="./overflow.html">Overflow
+                        <!-- ul>li*4>a{link-$} -->
+                        <ul class="dropdown">
+                            <li><a href="#">Link-1</li>
+                            <li><a href="3">link-2</a></li>
+                            <li><a href="3">link-3</a></li>
+                            <li><a href="3">link-4</a></li>
+                        </ul>
+                    </a></li>
+                <li><a href="./transform.html">Transform</a></li>
+                <li><a href="./transition.html">Transition</a></li>
+                <li><a href="./animation.html">Animation</a></li>
+                <li><a href="./icon.html">Icon</a></li>
+                <li><a href="./cricket.html">Cricket</a></li>
+                <li><a href="./float.html">Float</a></li>
+            </ul>
+        </nav>
+        <hr>
+    </header>
+    
     <div class="boox">
         <h1>Transition</h1>
     </div>
