--- a/milestone-module/milestone02/module8-responsive-css-layout/album.html
+++ b/milestone-module/milestone02/module8-responsive-css-layout/album.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Album</title>
     <link rel="stylesheet" href="style.css">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/c61e520dd5.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <header>
+        <nav>
+            <span>
+                <a href="./flexbox.html">Flexbox</a>
+                <a href="./flexuse.html">Login</a>
+                <a href="./grid.html">Grid</a>
+                <a href="./calendar.html">Calender</a>
+                <a href="./responsive.html">Responsive</a>
+                <a href="./album.html">Album</a>
+            </span>
+            <span>
+                <a href=""><i class="fas fa-user-circle"></i></a>
+                <a href=""><i class="fas fa-sign-out-alt"></i></a>
+            </span>
+        </nav>
+        <hr>
+    </header>
     <h1>My Awesome Photo Album with Tiger Mama</h1>
 
     <section>
