--- a/milestone-module/milestone02/module8-responsive-css-layout/flexuse.html
+++ b/milestone-module/milestone02/module8-responsive-css-layout/flexuse.html
@@ -13,16 +13,19 @@
     <header>
         <nav>
             <span>
-                <a href="">Home</a>
-                <a href="">Products</a>
-                <a href="">Orders</a>
-                <a href="">About Us</a>
+                <a href="./flexbox.html">Flexbox</a>
+                <a href="./flexuse.html">Login</a>
+                <a href="./grid.html">Grid</a>
+                <a href="./calendar.html">Calender</a>
+                <a href="./responsive.html">Responsive</a>
+                <a href="./album.html">Album</a>
             </span>
             <span>
                 <a href=""><i class="fas fa-user-circle"></i></a>
                 <a href=""><i class="fas fa-sign-out-alt"></i></a>
             </span>
         </nav>
+        <hr>
     </header>
     <h1>Create login form and flexible nav using flexbox</h1>
 
