--- a/milestone-module/milestone02/module9-html-css-landing-page/index.html
+++ b/milestone-module/milestone02/module9-html-css-landing-page/index.html
@@ -22,36 +22,41 @@
         </nav>
     </header>
     <!-- top players and top blogs -->
-    <section>
-        <div class="top-players">
-            <div class="players">
-                <!-- .player*6>img[src="./images/players/player-$.png"]+h2{top player-$} -->
-                <div class="player">
-                    <img src="./images/players/player-1.png" alt="">
-                    <h2>top player-1</h2>
-                </div>
-                <div class="player">
-                    <img src="./images/players/player-2.png" alt="">
-                    <h2>top player-2</h2>
-                </div>
-                <div class="player">
-                    <img src="./images/players/player-3.png" alt="">
-                    <h2>top player-3</h2>
-                </div>
-                <div class="player">
-                    <img src="./images/players/player-4.png" alt="">
-                    <h2>top player-4</h2>
-                </div>
-                <div class="player">
-                    <img src="./images/players/player-5.png" alt="">
-                    <h2>top player-5</h2>
-                </div>
-                <div class="player">
-                    <img src="./images/players/player-6.png" alt="">
-                    <h2>top player-6</h2>
+    <main>
+        <section class="container">
+            <div class="top-players">
+                <h1 class="section-title">Top Players</h1>
+                <div class="players">
+                    <!-- .player*6>img[src="./images/players/player-$.png"]+h2{top player-$} -->
+                    <div class="player">
+                        <img src="./images/players/player-1.png" alt="">
+                        <h2 class="player-name" >John Smith</h2>
+                    </div>
+                    <div class="player">
+                        <img src="./images/players/player-2.png" alt="">
+                        <h2 class="player-name">Pro Rasel</h2>
+                    </div>
+                    <div class="player">
+                        <img src="./images/players/player-3.png" alt="">
+                        <h2 class="player-name">Abu Sufian</h2>
+                    </div>
+                    <div class="player">
+                        <img src="./images/players/player-4.png" alt="">
+                        <h2 class="player-name">Shajedul Karim</h2>
+                    </div>
+                    <div class="player">
+                        <img src="./images/players/player-5.png" alt="">
+                        <h2 class="player-name">Maruf Ahmed</h2>
+                    </div>
+                    <div class="player">
+                        <img src="./images/players/player-6.png" alt="">
+                        <h2 class="player-name">Mujahid</h2>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+            <hr>
+            
+        </section>
+    </main>
 </body>
 </html>
