Ass02: Top Section added

--- a/milestone-module/assignments/ass02/index.html
+++ b/milestone-module/assignments/ass02/index.html
@@ -28,5 +28,21 @@
         </nav>
     </header>
     <!-- header End -->
+    <!-- main start -->
+    <main>
+        <section class="all-section">
+            <div class="top-section">
+                <div class="top-left">
+                    <h1>Start your Journey as Influencer</h1>
+                    <p>Influencer marketing not only adds an additional degree of marketing to your product, but it also helps increase awareness about your product and improves its target audience.</p>
+                    <a href="">Prebook now <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="top-right">
+                    <img src="./images/main-camera.png" alt="It's a main camera">
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- main End -->
 </body>
 </html>
