Ass02: Sponsor section added

--- a/milestone-module/assignments/ass02/index.html
+++ b/milestone-module/assignments/ass02/index.html
@@ -30,6 +30,7 @@
     <!-- header End -->
     <!-- main start -->
     <main>
+        <!-- top section Start  -->
         <section class="all-section">
             <div class="top-section">
                 <div class="top-left">
@@ -42,6 +43,20 @@
                 </div>
             </div>
         </section>
+        <!-- top section end -->
+        <!-- sponsor section start  -->
+        <hr class="hr">
+        <section class="sponsor">
+            <a href="https://en.alibaba.com/" target="-blank"><img src="./logos/Alibaba.svg" alt="Alibaba logo"></a>
+            <a href="https://www.amazon.com/" target="-blank"><img src="./logos/Amazon.svg" alt="Amazon logo"></a>
+            <a href="https://www.daraz.lk/" target="-blank"><img src="./logos/Daraz.pk Logo.svg" alt="Daraz logo"></a>
+            <a href="https://www.ebay.com/" target="-blank"><img src="./logos/Ebay.svg" alt="Ebay logo"></a>
+            <a href="https://www.rakuten.com/" target="-blank"><img src="./logos/Rakuten.svg" alt="Rakuten logo"></a>
+            <a href="https://www.walmart.com/" target="-blank"><img src="./logos/Walmart.svg" alt="Walmart logo"></a>
+            <a href="https://www.target.com/" target="-blank"><img src="./logos/Target.svg" alt="Target logo"></a>
+        </section>
+        <hr>
+        <!-- sponsor section end  -->
     </main>
     <!-- main End -->
 </body>
