Ass02: Grid Section Added

--- a/milestone-module/assignments/ass02/index.html
+++ b/milestone-module/assignments/ass02/index.html
@@ -17,14 +17,14 @@
 <body>
     <!-- header start -->
     <header>
-        <div class="header-title"><a href="">Influencer Products</a></div>
+        <div class="header-title"><a href="#">Influencer Products</a></div>
         <nav>
-            <a href="">Home</a>
-            <a href="">Products</a>
-            <a href="">Sign Up</a>
-            <a href="">Log In</a>
-            <a href=""><i class="fas fa-search"></i></a>
-            <a href=""><i class="fas fa-shopping-cart"></i></a>
+            <a href="#">Home</a>
+            <a href="#">Products</a>
+            <a href="#">Sign Up</a>
+            <a href="#">Log In</a>
+            <a href="#"><i class="fas fa-search"></i></a>
+            <a href="#"><i class="fas fa-shopping-cart"></i></a>
         </nav>
     </header>
     <!-- header End -->
@@ -36,7 +36,7 @@
                 <div class="top-left">
                     <h1>Start your Journey as Influencer</h1>
                     <p>Influencer marketing not only adds an additional degree of marketing to your product, but it also helps increase awareness about your product and improves its target audience.</p>
-                    <a href="">Prebook now <i class="fas fa-arrow-right"></i></a>
+                    <a href="#">Prebook now <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="top-right">
                     <img src="./images/main-camera.png" alt="It's a main camera">
@@ -57,6 +57,144 @@
         </section>
         <hr>
         <!-- sponsor section end  -->
+        <!-- grid section start -->
+        <section class="grid-section">
+            <div class="grid-title">
+                <h1>Popular Collection</h1>
+            </div>
+            <div class="grid-blogs">
+                <article class="grid-blog">
+                    <img src="./images/tripod.png" alt="tripod image">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span class="number">4.99</span>
+                    </span>
+                    <p>A tripod is a portable device used to support, stabilize and elevate a camera, a flash unit, or other videographic or observational / measuring equipment.</p>
+                </article>
+                <article class="grid-blog">
+                    <img src="./images/mic.png" alt="mic image">
+                    <h2>Microphone</h2>
+                    <h3>$120.25</h3>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span class="number">4.99</span>
+                    </span>
+                    <p>A microphone, colloquially called a mic or mike, is a device – a transducer – that converts sound into an electrical signal.</p>
+                </article>
+                <article class="grid-blog">
+                    <img src="./images/airpod.png" alt="airpod image">
+                    <h2>Airbuds</h2>
+                    <h3>$100.00</h3>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span class="number">4.99</span>
+                    </span>
+                    <p>AirPods are wireless Bluetooth earbuds designed by Apple Inc. They were first announced on September 7, 2016 alongside the iPhone 7.</p>
+                </article>
+                <article class="grid-blog">
+                    <img src="./images/drone.png" alt="drone image">
+                    <h2>Drone</h2>
+                    <h3>$980.25</h3>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span class="number">4.99</span>
+                    </span>
+                    <p>The All-In-One Drone. DJI Air 2S is a powerful all-in-one camera drone designed for creators on the move.</p>
+                </article>
+                <article class="grid-blog">
+                    <img src="./images/lights.png" alt="light image">
+                    <h2>Light Setup</h2>
+                    <h3>$1200.00</h3>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span class="number">4.99</span>
+                    </span>
+                    <p>Light Setups provide a variety of placed and pre-aimed lights to shape 3D text. A “Drama Top Right” light setup, with blue and purple colors added to the lights.</p>
+                </article>
+                <article class="grid-blog">
+                    <img src="./images/setup.png" alt="setup image">
+                    <h2>Photoshoot Set</h2>
+                    <h3>$820.40</h3>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span class="number">4.99</span>
+                    </span>
+                    <p>A photo shoot is the process taken by creatives and models that results in a visual objective being obtained. An example is a model posing for a photographer at a studio or an outdoor location.</p>
+                </article>
+                <article class="grid-blog">
+                    <img src="./images/camera.png" alt="camera image">
+                    <h2>Vlogging Camera</h2>
+                    <h3>$1800.80</h3>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span class="number">4.99</span>
+                    </span>
+                    <p>A camera is an optical instrument that captures a visual image. At a basic level, cameras are sealed boxes with a small hole that allows light through to capture an image on a light-sensitive surface.</p>
+                </article>
+                <article class="grid-blog">
+                    <img src="./images/single-light.png" alt="green screen image">
+                    <h2>Green Screen</h2>
+                    <h3>$25.48</h3>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span class="number">4.99</span>
+                    </span>
+                    <p>The Green Screen international wildlife film festival is held annually in and around Eckernförde, Germany. The festival shows full-length and short nature documentaries about animals in their natural habitat.</p>
+                </article>
+                <article class="grid-blog">
+                    <img src="./images/action.png" alt="action image">
+                    <h2>Action Camera</h2>
+                    <h3>$380.00</h3>
+                    <span>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span class="number">4.99</span>
+                    </span>
+                    <p>An action camera or action cam is a digital camera designed for recording action while being immersed in it. Action cameras are therefore typically compact and rugged, and waterproof at surface-level.</p>
+                </article>
+            </div>
+            <div class="grid-link">
+                <a href="#">See More <i class="fas fa-arrow-right"></i></a>
+            </div>
+        </section>
+        <!-- grid section end -->
     </main>
     <!-- main End -->
 </body>
