Ass02: Bottom Section & Footer Section Added

--- a/milestone-module/assignments/ass02/index.html
+++ b/milestone-module/assignments/ass02/index.html
@@ -28,6 +28,7 @@
         </nav>
     </header>
     <!-- header End -->
+
     <!-- main start -->
     <main>
         <!-- top section Start  -->
@@ -195,7 +196,36 @@
             </div>
         </section>
         <!-- grid section end -->
+        <!-- bottom section Start  -->
+        <section class="all-section">
+            <div class="bottom-section top-section">
+                <div class="bottom-left top-left">
+                    <img src="./logos/person-1.jpg" alt="Person's Picture">
+                </div>
+                <div class="bottom-right top-right">
+                    <h1>Crescent Deb Nath Partha</h1>
+                    <p>I am learning web development as a student of programming hero. This website features for html and css learning with responsive design. Web development is very highlighted and growing part of technology that why I am very interested.</p>
+                    <a href="https://crescentpartha.github.io/projectsHero/project1/intel.html" target="_blank">Join now <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </section>
+        <!-- bottom section end -->
     </main>
     <!-- main End -->
+
+    <!-- footer section start -->
+    <footer>
+        <h1>Influencer Products</h1>
+        <h3>Copyright &copy;2022 influencer products <br> All rights reserved</h3>
+        <div class="icon-link">
+            <span>
+                <a href="https://www.instagram.com/programminghero/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                <a href="https://web.programming-hero.com/" target="_blank"><i class="fas fa-globe"></i></a>
+                <a href="https://twitter.com/programminghero" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                <a href="https://www.youtube.com/c/ProgrammingHero" target="_blank"><i class="fab fa-youtube-square"></i></a>
+            </span>
+        </div>
+    </footer>
+    <!-- footer section end -->
 </body>
 </html>
