Module12: Exploring bg-color, border, color, overflow, positions, shadow, margin, padding, width, height

--- a/milestone-module/milestone03/module12-bootstrap/index.html
+++ b/milestone-module/milestone03/module12-bootstrap/index.html
@@ -16,12 +16,36 @@
 </head>
 
 <body>
-    <h1>I am starting a bootstrap while wearing boots.</h1>
-    <h2>Hello from Bootstrap</h2>
     <header>
 
     </header>
     <main>
+        <!-- 12.2 Exploring Background Color -->
+        <h1 class="bg-info">I am starting a bootstrap while wearing boots.</h1>
+        <h2 class="bg-primary">Hello from Bootstrap</h2>
+        <p class="bg-success">This is something about me exploring something new.</p>
+        <p class="bg-warning">I warn you don't text this person, he/she will block you.</p>
+        <div class="p-3 mb-2 bg-info text-dark">.bg-info</div>
+
+        <!-- 12.3 Exploring Borders, Colors, Overflow -->
+        <div class=" border-primary border-top border-bottom">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, non!</div>
+        <span class="border border-success bg-warning rounded-pill">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, ipsa!</span>
+
+        <!-- 12.3 Exploring Position -->
+        <br> <br>
+        <div class="position-relative">
+            <div class="position-absolute top-0 start-0">Lorem, ipsum.</div>
+            <div class="position-absolute top-0 end-0">Lorem, ipsum.</div>
+            <div class="position-absolute top-50 start-50">Lorem, ipsum.</div>
+            <div class="position-absolute bottom-50 end-50">Lorem, ipsum.</div>
+            <div class="position-absolute bottom-0 start-0">Lorem, ipsum.</div>
+            <div class="position-absolute bottom-0 end-0">Lorem, ipsum.</div>
+        </div>
+
+        <br> <br>
+        <!-- 12.4 Exploring Shadow, Margin, Padding, Width, Height -->
+        <div class="shadow-lg p-3 m-5 w-50 bg-body rounded">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, placeat.</div>
+
 
     </main>
     <footer>
